# keops

./: .RData  .cirrus.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  2e02dd1252.cu  5d7833998d.cu  73840adc3e.cu  73ebffdac0.cu  CHANGELOG.md  Dockerfile  Jenkinsfile  MANIFEST.in  Readme.md  Singularity.def  __init__.py  cirrus.toml  compile.sh  compile_optirun.sh  demo_slicing.py  doc-requirements.txt  docker-images.sh  ess.cu  generic_syntax.md  keops.Rproj  keops_version  licence.txt  memo_SymbolicTensors.txt.txt  pybuild.sh  pydoc.sh  pytest.sh  readme.md  setup.cfg  setup.py  setup_keopscore.py  test_fix.py  todo.md  (+1 more)
cuda/autodiff/: CMakeLists.txt  compile_bench  compile_mex  compile_mex_cpu  compile_simple_autodiff  compile_test_autodiff  compile_test_autodiff_cpp  compile_test_factorized  compile_test_factorized_cpp  formula.h.in  template.h.in
cuda/bench/: CMakeLists.txt  bench.cpp  bench_grad1conv.cu  generate_data.h  test_segfault.cpp
cuda/sandbox/: CMakeLists.txt  conv1d_generic.cu  test_factorized.cu  test_link.cu
cuda/test/: CMakeLists.txt  gpu_conv.cxx  test_grad1conv.cu
keops/: CMakeLists.txt  __init__.py  broadcast_batch_dimensions.py  config.py  cuda.cmake  formula.h.in  get_keops_dll.py  headers.cmake  keops.h  keops_includes.h  reductions.py
keops/bench/: CMakeLists.txt  bench_grad1conv.cu  generate_data.h
keops/binders/: Cpu_link_compile.py  Gpu_link_compile.py  LinkCompile.py  binders_definitions.py  checks.h  include.h  keops_cst.h  link_compile.py  switch.h  utils.h
keops/cluster/: GpuGridLabel.cu
keops/compilation/: Cpu_link_compile.py  CudaSizes.h  Gpu_link_compile.py  __init__.py  keops_nvrtc.cpp  link_compile.py
keops/config/: chunks.py  config.py
keops/core/: CpuConv.cpp  CpuConv_ranges.cpp  CudaErrorCheck.cu  GpuConv1D.cu  GpuConv1D_ranges.cu  GpuConv2D.cu  Pack.h  Readme.md  SetGpusProps.h  autodiff.h  binder_interface.h  broadcast_batch_dimensions.h  link_autodiff.cpp  link_autodiff.cu  pre_headers.h
keops/examples/: CMakeLists.txt  GetGpuProps.cu  test_autodiff.cpp  test_autodiff.cu  test_formula_without_j.cpp  test_formula_without_j.cu  test_fromdevice  test_fromdevice.cu  test_gpytorch.cu  test_reductions.cpp  test_reductions.cu  test_simple.cpp  test_simple.cu  test_tensordot_formula.cpp  test_tensordot_formula.cu
keops/formulas/: Chunkable_Op.py  GetReduction.py  Operation.py  VectorizedComplexScalarOp.py  VectorizedScalarOp.py  __init__.py
keops/include/: CudaSizes.h  Ranges.h  Ranges_no_template.h  Sizes.h  Sizes_no_template.h  ranges_utils.h  utils_pe.h
keops/mapreduce/: Chunk_Mode_Constants.py  CpuAssignZero.py  CpuReduc.py  CpuReduc_ranges.py  GpuAssignZero.py  GpuReduc1D.py  GpuReduc1D_chunks.py  GpuReduc1D_finalchunks.py  GpuReduc1D_ranges.py  GpuReduc1D_ranges_chunks.py  GpuReduc1D_ranges_finalchunks.py  GpuReduc2D.py  MapReduce.py  __init__.py
keops/mex/: CMakeLists.txt  cudaconv.cpp
keops/old/: CMakeLists.txt
keops/old_compile/: compile_mex  compile_mex_cpu  compile_newsyntax  test_link.cu  test_link_grad.cu  test_link_grady.cu
keops/python_engine/: CpuReduc.cpp  CudaErrorCheck.cu  GpuReduc1D.cu  Test_GenCode.ipynb  Tree.py  Untitled.ipynb  __init__.py  broadcast_batch_dimensions.py  config.py  get_keops_dll.py  get_keops_routine.py  keops_main.py  link_autodiff.cpp  link_compile.py  map_reduce.py  operations.py  reductions.py  script_test.py  script_test_gpu.py  sum_schemes.py  test.cpp  test.cu  test.dylib  test.py  test_lazytensor_gaussian.py  test_nvrtc.cu  tree.py  tree_class.py  utils.py
keops/sandbox/: CMakeLists.txt  Conv2D.py  chunks.py  chunks_ranges.py  conv1d_generic.cu  conv1d_specific.cu  do_clean_keops.py  do_test_op.py  finalchunks.py  finalchunks_ranges.py  formula.py  genred_float16.py  genred_gaussian.py  genred_inplace.py  lazytensor_gaussian.py  lazytensor_gaussian_batch.py  lazytensor_gaussian_fromhost.py  lazytensor_gaussian_inplace.py  lazytensor_gaussian_numpy_inplace.py  notao.cpp  simple_autodiff.cu  simplification_rules.py  template.cpp  test.cpp  test.cu  test_argkmin.cpp  test_argmin.cpp  test_argmin.cu  test_autodiff.cpp  test_autodiff.cu  test_chunk.cu  test_compiletensordot.cpp  test_factorized.cpp  test_factorized.cu  test_float32.cu  test_fromdevice.cu  test_kminargkmin.cpp  test_logsumexp.cpp  test_logsumexp.cu  test_minargmin.cpp  (+10 more)
keops/specific/: CMakeLists.txt
keops/test/: CMakeLists.txt  TestOperation.py  compile  gpu_conv.cxx  gtest_compile.cpp  gtest_conv.cpp  gtest_grad1conv.cu  gtest_tensordot.cpp  gtest_tensordot.cu  test_grad1conv.cu
keops/tests/: test_op.py
keops/utils/: Cache.py  TestOperation.py  code_gen_utils.py  gpu_utils.py  math_functions.py  misc_utils.py
keopscore/: __init__.py  get_keops_dll.py  pyproject.toml  readme.md  setup.py
keopscore/binders/: LinkCompile.py
keopscore/config/: config.py
keopscore/formulas/: Operation.py  VectorizedScalarOp.py
keopscore/include/: ranges_utils.h
keopscore/keopscore/: __init__.py  get_keops_dll.py  readme.md
keopscore/keopscore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
keopscore/mapreduce/: Chunk_Mode_Constants.py  MapReduce.py  __init__.py
keopscore/sandbox/: chunks.py  do_clean_keops.py  do_test_op.py  lazytensor_gaussian_batchdims.py  simplification_rules.py
keopscore/utils/: code_gen_utils.py  gpu_utils.py  math_functions.py  misc_utils.py
keopslab/: CMakeLists.txt  default_options.m  keopslab.md
keopslab/LazyTensor/: ArrayHandle.m  LazyTensor.m  broadcast_shape.m  get_aliases.m  offsetvarnames.m  same_shape.m  same_shape_to_one.m  same_shape_to_one_unary.m
keopslab/common/: clean_keops.m  compile_code.m  getcmake.m  sepeqstr.m  set_accuracy_options.m  set_default_option.m  string2hash.m
keopslab/examples/: convolution.m  fshape_scp.m  generic_example.m  scriptLogSumExp.m  (+22 more)
pykeops/: CMakeLists.txt  MANIFEST.in  __init__.py  __init__.py.wheel  config.py  generate_wheel.sh  keops  libKeOpstorch.h  pykeops.md  pyproject.toml  readme.md  rogue_test.py  setup.py  torch_headers.h  torch_headers.h.in  version
(+2698 files in other folders)
